Refactored AskListener in client